# WarehouseSystem_using_Qt

./: CMakeLists.txt  README.md  addnewproductdialog.cpp  addnewproductdialog.h  addnewproductdialog.ui  addnewuserdialog.cpp  addnewuserdialog.h  addnewuserdialog.ui  addnewzonedialog.cpp  addnewzonedialog.h  addnewzonedialog.ui  addstockdialog.cpp  addstockdialog.h  addstockdialog.ui  adminView.cpp  admincontrolwidget.cpp  admincontrolwidget.h  databaseFiles.cpp  databaseSQL.cpp  dispatchstockdialog.cpp  dispatchstockdialog.h  dispatchstockdialog.ui  driver.cpp  idGenerator.cpp  login.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  product.cpp  removeproductdialog.cpp  removeproductdialog.h  removeproductdialog.ui  removeuserdialog.cpp  removeuserdialog.h  removeuserdialog.ui  removezonedialog.cpp  removezonedialog.h  removezonedialog.ui  reportdialog.cpp  (+13 more)
data/: warehouse_system.db
include/: README.md
include/warehouseSystem/: adminView.hpp  database.hpp  databaseSQL.hpp  driver.hpp  login.hpp  person.hpp  report.hpp  savingInJson.h  util.hpp  view.hpp  zone.hpp
include/warehouse_system/: adminView.hpp  database.hpp  databaseFiles.hpp  databaseSQL.hpp  driver.hpp  idGenerator.hpp  login.hpp  product.hpp  view.hpp  zone.hpp
